2019-07-03 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.17
	- fix pedantic compilation warning
        - configure fails if pkg-config isn't found

2019-06-17 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.16
	- Configure script checks for libcurl HTTPS support
	- Minor man page corrections

2019-06-15 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.15
	- Exit with error if both -a and -s are specified
	- Avoid depending on libtasn1 if gnutls_decode_rs_value is available

2019-06-12 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.14
	- Fix deprecated API when building with OpenSSL v1.1.1c

2019-06-05 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.13
	- Disable mbedTLS runtime version check if not available

2019-05-18 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.12
	- Ensure EC key params are always properly padded
	- Improved hook_run error checking

2019-05-17 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.11
	- Key rollover (https://tools.ietf.org/html/rfc8555#section-7.3.5)
	- Revoked cert files now renamed to 'revoked-TIMESTAMP.pem'
	- Key auth contains SHA256 digest for tls-alpn-01 (like dns-01)
	- Minor logging improvements

2019-05-12 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.10
	- added secp384r1 EC key support
	- -b, --bits option accepts 256 or 384 for EC keys
	- enforce multiple of 8 RSA key size
	- improved acme_get and acme_post verbose logging
	- retry upon badNonce response according to RFC8555 6.5
	- mbedtls: fixed incorrect size of EC signature

2019-05-09 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.9
	- added EC key/cert support (-t, --type=EC, default RSA)
	- added RSA key length option (-b, --bits=BITS, default 2048)

2019-05-04 Nicola Di Lieto <nicola.dilieto@gmail.com>
	* Release 1.0.8
	- added OpenSSL support (./configure --with-openssl)
	- check libraries versions at both compile and run time